--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Bajo el lema "Confidence over Accuracy", el curso se aleja de la rigidez de las 
     <section id="section-formulario">
        <h2 class="titulo-info"> + INFO </h2>
        <div class="formulario"> 
-        <form action="https://formsubmit.co/luuchavest@gmail.com" class="formulario" method="post">
+        <form action="https://formsubmit.co/ajax/luuchavest@gmail.com" class="formulario" method="post">
 
             <div class="pregunta">
             <label for="nombre">Tu nombre</label>
