--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@ Bajo el lema "Confidence over Accuracy", el curso se aleja de la rigidez de las 
      <section class="copyright">
         <h5> © 2026 Speak by Lu. Todos los derechos reservados.</h5>
     </section>
+
+    
+        <div class="teacher-img">
+        <img  class="img-footer"  src="./img/teacher.png" alt="teacher-luciana">
+      </div>
 </footer>
     
 <script src="script.js"> </script>
